# totui

./: Cargo.toml  README.md  TODO.txt  result  test  test_todo.txt
src/: app.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  todo.rs  todo_grammar.pest  tui.rs  ui.rs  widgets.rs
