[package]
name = "totui"
description = "A TUI for TODO.txt files"
version = "0.1.0"
authors = ["HannesFeil <hannesfeil@gmx.de>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
ratatui = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.19"
pest = "2.7.11"
pest_derive = "2.7.11"
anyhow = "1.0.86"
chrono = "0.4.38"
directories = "5.0.1"
crokey = "1.0.1"
tui-input = "0.9.0"
